<resources>
    <string name="app_name">Book Store</string>

    <string name="book_editor_activity">Add Book</string>
    <string name="book_name">Book</string>
    <string name="book_name_hint">Book name</string>
    <string name="price">Price</string>
    <string name="price_currency">Inr</string>
    <string name="price_hint">Book price</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_hint">Stock quantity</string>
    <string name="supplier_name">Supplier</string>
    <string name="supplier_hint">Supplier Name</string>
    <string name="supplier_phone_no">Contact No.</string>
    <string name="supplier_phone_hint">Supplier Contact no.</string>
    <string name="success_msg">Book saved, id :</string>
    <string name="error_msg">Error while adding Book</string>

    <!--MENU ITEMS-->
    <string name="dummy_data">Insert Dummy Data</string>
    <string name="save">Save</string>

    <!--Dummy Query Strings-->
    <string name="header_string">No. of Book Entries are :</string>
    <string name="books">books</string>
    <string name="dummy_product_name">The Secret</string>
    <string name="dummy_price">499</string>
    <string name="dummy_quantity">50</string>
    <string name="dummy_supplier_name">Ritika</string>
    <string name="dummy_supplier_phone">9876543210</string>

    <!--Log Strings-->
    <string name="insertData">in insertData Method</string>
    <string name="displayDatabaseInfo">in displayDatabaseInfo Method</string>
    <string name="data_updated">Data updated </string>
    <string name="cursor_closed">Cursor closed</string>
    <string name="insert_data_success">Data added</string>
</resources>
