<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_weight="1"
            android:text="@string/book_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/_8dp" />

        <EditText
            android:id="@+id/book_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_weight="2"
            android:hint="@string/book_name_hint"
            android:inputType="textCapWords"
            android:layout_marginRight="@dimen/_8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_weight="1"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/_8dp" />

        <EditText
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_weight="2"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal"
            android:layout_marginRight="@dimen/_8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/_8dp" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_weight="2"
            android:hint="@string/quantity_hint"
            android:inputType="numberDecimal"
            android:layout_marginRight="@dimen/_8dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_weight="1"
            android:text="@string/supplier_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/_8dp" />

        <EditText
            android:id="@+id/supplier_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_weight="2"
            android:hint="@string/supplier_hint"
            android:inputType="textCapWords"
            android:layout_marginRight="@dimen/_8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_weight="1"
            android:text="@string/supplier_phone_no"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginLeft="@dimen/_8dp" />

        <EditText
            android:id="@+id/supplier_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_weight="2"
            android:hint="@string/supplier_phone_hint"
            android:inputType="phone|numberDecimal"
            android:layout_marginRight="@dimen/_8dp" />

    </LinearLayout>

</LinearLayout>